# ocalf

./: .gitignore  README.md  dune-project  ocalf.opam
exercises/: info.toml
exercises/00_intro/: intro1.ml  intro2.ml
exercises/01_variables/: variables1.ml  variables2.ml  variables3.ml  variables4.ml
exercises/02_functions/: functions1.ml  functions2.ml  functions3.ml  functions4.ml  functions5.ml
exercises/03_if/: if1.ml  if2.ml  if3.ml
exercises/04_primitive_types/: primitive_types1.ml  primitive_types2.ml  primitive_types3.ml  primitive_types4.ml
exercises/05_tuples/: tuples1.ml  tuples2.ml  tuples3.ml
exercises/06_records/: records1.ml  records2.ml  records3.ml  records4.ml
exercises/07_variants/: variants1.ml  variants2.ml  variants3.ml  variants4.ml
exercises/08_pattern_matching/: pattern_matching1.ml  pattern_matching2.ml  pattern_matching3.ml  pattern_matching4.ml  pattern_matching5.ml
exercises/09_lists/: lists1.ml  lists2.ml  lists3.ml  lists4.ml  lists5.ml
exercises/10_options/: options1.ml  options2.ml  options3.ml  options4.ml
exercises/11_results/: results1.ml  results2.ml  results3.ml  results4.ml
exercises/12_modules/: modules1.ml  modules2.ml  modules3.ml  modules4.ml  modules5.ml
exercises/13_functors/: functors1.ml  functors2.ml  functors3.ml  functors4.ml
exercises/14_higher_order/: higher_order1.ml  higher_order2.ml  higher_order3.ml  higher_order4.ml  higher_order5.ml
exercises/15_recursion/: recursion1.ml  recursion2.ml  recursion3.ml  (+1 more)
lib/: config.ml  dune  exercise.ml  ocalf.ml  progress.ml  runner.ml
(+315 files in other folders)
